Fix z-index in drawer component

--- a/src/app/components/sidenav/sidenav.component.scss
+++ b/src/app/components/sidenav/sidenav.component.scss
@@ -3,7 +3,7 @@
 .example-container {
   height: calc(100% - 64px);
   position: absolute;
-  background-color: transparent;
+  background-color: rgba(0, 0, 0, 0.219);
   width: 100%;
   cursor: pointer;
 }
@@ -14,7 +14,7 @@
   border-bottom-right-radius: 10px;
   background: $main-color;
   box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
-  z-index: 4;
+  z-index: 6;
   cursor: auto;
   border: 1px solid rgba(255, 255, 255, 0.18);
 }
@@ -43,4 +43,5 @@ a:hover {
 .hidden {
   background-color: transparent;
   cursor: auto;
+  z-index: -1;
 }
